--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,8 +1,13 @@
-<mvc:View controllerName="search.Invoice.controller.App" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc">
-	<Input placeholder="{i18n>invType}" value="{/invInput/invType}" description="{i18n>invType} is {/invInput/invType} " valueLiveUpdate="true"/>
-	<Input placeholder="{i18n>invNumber}" value="{/invInput/invNumber}" description="Entered {i18n>invNumber} is {/invInput/invNumber}"
-		valueLiveUpdate="true"/>
-	<Input placeholder="{i18n>invCompanyCode}" value="{/invInput/invCompanyCode}"
-		description="{i18n>invCompanyCode} is {/invInput/invCompanyCode} " valueLiveUpdate="true"/>
-	<Button text="Search" press=".onSearchInvoices"/>
+<mvc:View controllerName="search.Invoice.controller.App" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc" displayBlock="true">
+	<Shell>
+		<App>
+			<pages>
+				<Page title='{i18n>homePageTitle}'>
+					<content>
+						<mvc:XMLView viewName="search.Invoice.view.Invoice"/>
+					</content>
+				</Page>
+			</pages>
+		</App>
+	</Shell>
 </mvc:View>
