--- a/webapp/view/Invoice.view.xml
+++ b/webapp/view/Invoice.view.xml
@@ -13,7 +13,8 @@
 						<List headerText='{i18n>invoiceList}' class="sapUIResponsiveMargin" width="auto" items="{inv>/Invoices}">
 							<items>
 								<ObjectListItem title="{inv>Vbeln}-{inv>Bukrs}"
-									number="{ parts:[{path: 'inv>Amount'}, {path:'inv>/Waers'}], type: 'sap.ui.model.type.Currency', formatOptions: { showMeasure: false } }"/>
+									number="{ parts:[{path: 'inv>Amount'}, {path:'inv>/Waers'}], type: 'sap.ui.model.type.Currency', formatOptions: { showMeasure: false } }"
+									numberUnit="{inv>Waers}" numberState="{= ${inv>Amount}>120 ? 'Error' : 'Success'}"/>
 							</items>
 						</List>
 					</content>
