--- a/webapp/view/Invoice.view.xml
+++ b/webapp/view/Invoice.view.xml
@@ -4,21 +4,27 @@
 			<pages>
 				<Page title='{i18n>homePageTitle}'>
 					<content>
-						<Input placeholder="{i18n>invType}" value="{/invInput/invType}" description="{i18n>invType} is {/invInput/invType} " valueLiveUpdate="true"/>
+						<Input class="sapUiResponsiveMargin" placeholder="{i18n>invType}" value="{/invInput/invType}"
+							description="{i18n>invType} is {/invInput/invType} " valueLiveUpdate="true"/>
 						<Input class="sapUiResponsiveMargin" placeholder="{i18n>invNumber}" value="{/invInput/invNumber}"
 							description="Entered {i18n>invNumber} is {/invInput/invNumber}" valueLiveUpdate="true"/>
 						<Input class="sapUiResponsiveMargin" placeholder="{i18n>invCompanyCode}" value="{/invInput/invCompanyCode}"
 							description="{i18n>invCompanyCode} is {/invInput/invCompanyCode} " valueLiveUpdate="true"/>
 						<Button class="sapUiResponsiveMargin" text="Search" press=".onSearchInvoices"/>
-						<List headerText='{i18n>invoiceList}' class="sapUIResponsiveMargin" width="auto" items="{inv>/Invoices}">
+						<List id='invList' headerText='{i18n>invoiceList}' class="sapUIResponsiveMargin" width="auto" items="{inv>/Invoices}">
 							<items>
-								<ObjectListItem title="{inv>Vbeln}-{inv>Bukrs}"
+								<ObjectListItem title="{inv>Vbeln}-{inv>Matnr}"
 									number="{ parts:[{path: 'inv>Amount'}, {path:'inv>/Waers'}], type: 'sap.ui.model.type.Currency', formatOptions: { showMeasure: false } }"
 									numberUnit="{inv>Waers}" numberState="{= ${inv>Amount}>120 ? 'Error' : 'Success'}">
-									<ObjectAttribute text="{path:'inv>InvStatus', formatter:'.formatter.readbleInvStatus' }"/>
+									<ObjectAttribute text="{inv>Bukrs}"/>
+									<ObjectAttribute text="{inv>Plant}"/>
+									<ObjectAttribute text="{inv>Type}"/>
 									<markers>
 										<ObjectMarker type="{= ${inv>InvStatus} === 'CONF' ? 'Favorite' :'Flagged'}"/>
 									</markers>
+									<firstStatus>
+										<ObjectStatus text="{path:'inv>InvStatus', formatter:'.formatter.readbleInvStatus' }"/>
+									</firstStatus>
 								</ObjectListItem>
 							</items>
 						</List>
