--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,13 +1,7 @@
 <mvc:View controllerName="search.Invoice.controller.App" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc" displayBlock="true">
 	<Shell>
-		<App>
-			<pages>
-				<Page title='{i18n>homePageTitle}'>
-					<content>
-						<mvc:XMLView viewName="search.Invoice.view.Invoice"/>
-					</content>
-				</Page>
-			</pages>
+		<App class='invApp' id="app">
+		
 		</App>
 	</Shell>
 </mvc:View>
