--- a/webapp/view/Invoice.view.xml
+++ b/webapp/view/Invoice.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="search.Invoice.controller.Invoice" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc">
+<mvc:View controllerName="search.Invoice.controller.Invoice" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc" id='invhome'>
 	<Shell>
 		<App>
 			<pages>
@@ -18,7 +18,7 @@
 							<items>
 								<ObjectListItem title="{inv>Vbeln}-{inv>Matnr}"
 									number="{ parts:[{path: 'inv>Amount'}, {path:'inv>/Waers'}], type: 'sap.ui.model.type.Currency', formatOptions: { showMeasure: false } }"
-									numberUnit="{inv>Waers}" numberState="{= ${inv>Amount}>120 ? 'Error' : 'Success'}">
+									numberUnit="{inv>Waers}" numberState="{= ${inv>Amount}>120 ? 'Error' : 'Success'}"  type="Navigation" press="showDetail">
 									<ObjectAttribute text="{inv>Bukrs}"/>
 									<ObjectAttribute text="{inv>Plant}"/>
 									<ObjectAttribute text="{inv>Type}"/>
