--- a/webapp/view/Invdetail.view.xml
+++ b/webapp/view/Invdetail.view.xml
@@ -1,5 +1,5 @@
-<mvc:View xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc">
-	<Page title="{i18n>InvDetailPage}">
-		<ObjectHeader title="{i18n>SelectedInv}"/>
+<mvc:View controllerName="search.Invoice.controller.Invdetail" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc">
+	<Page title="{i18n>InvDetailPage}}" showNavButton="true"  navButtonPress='.onNavBack'>
+		<ObjectHeader intro="{inv>Vbeln}" title="{inv>Matnr}"/>
 	</Page>
 </mvc:View>
