--- a/webapp/view/Invoice.view.xml
+++ b/webapp/view/Invoice.view.xml
@@ -1,10 +1,10 @@
-<mvc:View controllerName="search.Invoice.controller.Invoice" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc">
+<mvc:View controllerName="search.Invoice.controller.Invoice" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc" xmlns:form="sap.ui.layout.form">
 	<Shell>
 		<App>
 			<pages>
 				<Page title='{i18n>homePageTitle}'>
 					<content>
-						<Input class="sapUiResponsiveMargin" placeholder="{i18n>invType}" value="{/invInput/invType}"
+						<Input class=" sapUiResponsiveMargin" placeholder=" {i18n>invType}" value="{/invInput/invType}"
 							description="{i18n>invType} is {/invInput/invType} " valueLiveUpdate="true"/>
 						<Input class="sapUiResponsiveMargin" placeholder="{i18n>invNumber}" value="{/invInput/invNumber}"
 							description="Entered {i18n>invNumber} is {/invInput/invNumber}" valueLiveUpdate="true"/>
@@ -18,7 +18,7 @@
 							<items>
 								<ObjectListItem title="{inv>Vbeln}-{inv>Matnr}"
 									number="{ parts:[{path: 'inv>Amount'}, {path:'inv>/Waers'}], type: 'sap.ui.model.type.Currency', formatOptions: { showMeasure: false } }"
-									numberUnit="{inv>Waers}" numberState="{= ${inv>Amount}>120 ? 'Error' : 'Success'}" type="Navigation" press="showDetail">
+									numberUnit="{inv>Waers}" numberState="{= ${inv>Amount}>120 ? 'Error' : 'Success'}" type="Active" press="showDetail">
 									<ObjectAttribute text="{inv>Bukrs}"/>
 									<ObjectAttribute text="{inv>Plant}"/>
 									<ObjectAttribute text="{inv>Type}"/>
@@ -37,6 +37,18 @@
 								</OverflowToolbar>
 							</headerToolbar>
 						</List>
+						<Panel id="invDetailPanel" headerText="{i18n>invDetailPanel}" class="sapUiResponsiveMargin" width="auto">
+							<form:SimpleForm editable="true" layout="ColumnLayout">
+								<Label text="{i18n>invNumber}"/>
+								<Input value="{inv>Vbeln}"/>
+								<Label text="{i18n>invType}"/>
+								<Input value="{inv>Type}"/>
+								<Label text="{i18n>plant}"/>
+								<Input value="{inv>Plant}"/>
+								<Label text="{i18n>companyCode}"/>
+								<Input value="{inv>Bukrs}"/>
+							</form:SimpleForm>
+						</Panel>
 					</content>
 				</Page>
 			</pages>
