BaseController for common functions

--- a/webapp/view/Invalid.view.xml
+++ b/webapp/view/Invalid.view.xml
@@ -1,3 +1,4 @@
 <mvc:View controllerName="search.Invoice.controller.Invalid" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc">
-	<MessagePage title="{i18n>InvalPath}" description="{i18n>InvalPath.description}"/>
+	<MessagePage title="{i18n>InvalPath}" description="{i18n>InvalPath.description}" showNavButton="true" 
+	navButtonPress="onBack"/>
 </mvc:View>
