--- a/webapp/view/Invoice.view.xml
+++ b/webapp/view/Invoice.view.xml
@@ -18,7 +18,7 @@
 							<items>
 								<ObjectListItem title="{inv>Vbeln}-{inv>Matnr}"
 									number="{ parts:[{path: 'inv>Amount'}, {path:'inv>/Waers'}], type: 'sap.ui.model.type.Currency', formatOptions: { showMeasure: false } }"
-									numberUnit="{inv>Waers}" numberState="{= ${inv>Amount}>120 ? 'Error' : 'Success'}" type="Active" press="showDetail">
+									numberUnit="{inv>Waers}" numberState="{= ${inv>Amount}>120 ? 'Error' : 'Success'}" type="Navigation" press="showDetail">
 									<ObjectAttribute text="{inv>Bukrs}"/>
 									<ObjectAttribute text="{inv>Plant}"/>
 									<ObjectAttribute text="{inv>Type}"/>
