--- a/webapp/view/Invdetail.view.xml
+++ b/webapp/view/Invdetail.view.xml
@@ -1,5 +1,5 @@
 <mvc:View controllerName="search.Invoice.controller.Invdetail" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc">
-	<Page title="{i18n>InvDetailPage}}" showNavButton="true"  navButtonPress='.onNavBack'>
+	<Page title="{i18n>InvDetailPage}}" showNavButton="true" navButtonPress='.onBack'>
 		<ObjectHeader intro="{inv>Vbeln}" title="{inv>Matnr}"/>
 	</Page>
 </mvc:View>
