--- a/webapp/view/Invdetail.view.xml
+++ b/webapp/view/Invdetail.view.xml
@@ -1,5 +1,9 @@
 <mvc:View controllerName="search.Invoice.controller.Invdetail" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc">
-	<Page title="{i18n>InvDetailPage}}" showNavButton="true" navButtonPress='.onBack'>
+	<Page   id="InvDetailParent" title="{i18n>InvDetailPage}}" showNavButton="true" navButtonPress='onBack'>
 		<ObjectHeader intro="{inv>Vbeln}" title="{inv>Matnr}"/>
+	<content>
+		
+	</content>	
+		
 	</Page>
 </mvc:View>
